Fixed sections and modified section alignments

--- a/styles/achievements.css
+++ b/styles/achievements.css
@@ -8,7 +8,7 @@
 #achievements h2 {
     font-size: 2em;
     color: #333;
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
 }
 
 #achievements ul {
