--- a/styles/main.css
+++ b/styles/main.css
@@ -9,18 +9,19 @@ body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
     color: #333;
-    /*background-color: #f0f2f5; /* Subtle gray for page background */
-    background-color: green;
+    background-color: #f0f2f5; /* Subtle gray for page background */
+    /*background-color: green;*/
 }
 
 /* Section Styles */
 section {
     padding: 60px 20px;
     max-width: 800px;
-    margin: auto;
+    margin: 10px auto;
     background-color: rgba(255, 255, 255, 0.671);
-    margin-bottom: 50px;
+    margin-bottom: 5px;
     border-radius: 8px;
+    background-color: #f9f9f9;
 }
 
 h2 {
@@ -73,7 +74,7 @@ h2, h3 {
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    margin: 20px;
+    margin:20px 20px 0px;
     animation: fadeIn 1.2s ease-out;
 }
 
@@ -173,8 +174,9 @@ h2, h3 {
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 30px;
+    /*margin-top: 30px;*/
     text-align: center;
+    /*margin: 40px auto;*/
 }
 
 #contact h2 {
@@ -234,8 +236,7 @@ h2, h3 {
     color: white;
     text-decoration: none;
 }
-.github-contact {
-    display: flex;
+.linkedIn-contact {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
