--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,7 +1,7 @@
 #projects .project {
     background-color: #fff;
     padding: 20px;
-    margin: 20px 0;
+    /*margin: 20px 0;*/
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -18,6 +18,13 @@
 #projects .project:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
 }
+.project .subheader {
+    text-align: center;
+    margin:10px 0px;
+}
+.project {
+    margin-top: 10px;
+}
 
 .project-details p {
     display: flex;
@@ -30,4 +37,14 @@
     font-size: 1.2rem;
     color: #3498db;
     margin-right: 8px;
+}
+
+.project-details {
+    margin-bottom: 5px;
+}
+
+.project-link {
+    text-align: center;
+    margin-top: 2px;
+    padding-top: 2px;
 }
