--- a/styles/skills.css
+++ b/styles/skills.css
@@ -4,8 +4,7 @@
     padding: 60px 20px;
     border-radius: 8px;
     text-align: center;
-    max-width: 1000px;
-    margin: 40px auto;
+    /*margin: 40px auto;*/
 }
 
 #skills h2 {
